# llm-for-Ecommerce

./: .gitignore  DATA_POLICY.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/rag/: config.yaml
configs/serve/: vllm.yaml
configs/train/: sft_llama3_8b.yaml  sft_qlora_4b.yaml  sft_qwen3_8b.yaml
data/fixtures/finance/parsed/: fixture_a_2024.json
data/registry/: README.md  sources.csv  sources.json
docs/: ADR-001-model-selection.md  ADR-002-rag-architecture.md  ADR-003-finetuning-strategy.md
scripts/: fault_injection.py  monitor.py  serve_vllm.sh
src/: __init__.py
src/common/: __init__.py  cli.py  hashing.py  logging_utils.py  near_dedup.py  pii.py  schemas.py  versioning.py
src/ecommerce/: __init__.py
src/ecommerce/dataset/: __init__.py  canonical_cases.py  conversation_generator.py  intent_classifier.py  pipeline.py  policy_engine.py  registry.py  sop_builder.py
src/ecommerce/eval/: __init__.py  evaluator.py  metrics.py
src/ecommerce/train/: __init__.py  dpo_trainer.py  sft_config.py  sft_trainer.py
src/finance_rag/: __init__.py  answer_engine.py  chunker.py  document_ingest.py  pdf_parser.py  reranker.py  retriever.py
src/serving/: __init__.py
src/serving/gateway/: main.py  router.py
tests/adversarial/: test_security.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_common.py  test_ecommerce_dataset.py  test_eval_metrics.py  test_registry.py  test_sft_mask.py  test_split_and_dedup.py
