[project]
name = "llm-portfolio-platform"
version = "0.1.0"
description = "LLM Full-Stack Portfolio: E-commerce Customer Service + Financial RAG"
authors = [{name = "Portfolio Author", email = "portfolio@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "rag", "fine-tuning", "customer-service", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.41.0",
    # RAG
    "faiss-cpu>=1.7.4",
    "faiss-gpu>=1.7.4",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
    "rank_bm25>=0.2.2",
    # PDF Processing
    "pdfplumber>=0.10.3",
    "pymupdf>=1.23.0",
    "paddleocr>=2.7.0",
    "docling>=1.0.0",
    # API & Web
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    # Data
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    # Evaluation
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "langchain>=0.1.0",
    "ragas>=0.1.0",
    # Utils
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",  # For TestClient
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
]
dvc = [
    "dvc>=3.0.0",
    "dvc-gdrive>=2.0.0",
]
mlflow = [
    "mlflow>=2.12.0",
    "optuna>=3.5.0",
]
all = [
    "llm-portfolio-platform[dev,dvc,mlflow]",
]

[project.scripts]
llm-portfolio = "src.common.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
