[project]
name = "llm-portfolio-platform"
version = "0.2.0"
description = "LLM Full-Stack Portfolio: E-commerce Customer Service + Financial RAG"
authors = [{name = "Portfolio Author", email = "portfolio@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "rag", "fine-tuning", "customer-service", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies - minimal set for basic functionality
dependencies = [
    # Core ML (optional, for training)
    # "torch>=2.0.0",
    # "transformers>=4.40.0",
    # "peft>=0.10.0",
    # "trl>=0.8.0",
    # "accelerate>=0.28.0",
    # "bitsandbytes>=0.41.0",
    # "datasets>=2.14.0",
    # RAG (optional)
    # "faiss-cpu>=1.7.4",  # OR faiss-gpu, not both
    # "sentence-transformers>=2.3.0",
    # "rank-bm25>=0.2.2",
    # PDF Processing (optional)
    # "pdfplumber>=0.10.3",
    # "pymupdf>=1.23.0",
    # API & Web
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    # Data
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Utils
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
# Training dependencies
train = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "sentencepiece>=0.1.99",
]
# RAG dependencies
rag = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.0",
    "rank-bm25>=0.2.2",
    "pdfplumber>=0.10.3",
    "pymupdf>=1.23.0",
    "jieba>=0.42.1",
]
# GPU RAG (alternative to CPU)
rag-gpu = [
    "faiss-gpu>=1.7.4",
    "sentence-transformers>=2.3.0",
    "rank-bm25>=0.2.2",
    "pdfplumber>=0.10.3",
    "pymupdf>=1.23.0",
    "jieba>=0.42.1",
]
# Development dependencies
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
    "pytest-cov>=4.1.0",
]
# All optional dependencies
all = [
    "llm-portfolio-platform[train,rag,dev]",
]
# DVC for data versioning
dvc = [
    "dvc>=3.0.0",
    "dvc-gdrive>=2.0.0",
]
# MLflow for experiment tracking
mlflow = [
    "mlflow>=2.12.0",
    "optuna>=3.5.0",
]

[project.scripts]
llm-portfolio = "src.common.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
# Don't require all optional deps for basic tests
addopts = "-p no:optional"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
